[metadata]
name = vlive_api
version = 0.0.4
author = MC Gela
author_email = mcgela@mcgela.work
description = API of VLIVE(https://www.vlive.tv/)
long_description = file:README.md
url = https://github.com/mcgela/vlive_api
license = MIT
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Utilities
[options]
zip_safe = False
packages = find: